--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
                     <div class="resources-block">
                         <div class="flex ver">
                             <h4>THE NARRATIVE</h4>
-                            <a href="#">Missed a 100x, put that money into a 0.01x - ROPE</a>
-                            <a href="#">Bought High, Sold Low - ROPE </a>
+                            <a href="#">Jeeted a mooner and bagged a rug? - $ROPE</a>
+                            <a href="#">Bought High, Sold Low - $ROPE </a>
                             <a href="#">$ROPE early $ROPE often</a>
                         </div>
                     </div>
