--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                         <div class="flex ver">
                             <h4>THE NARRATIVE</h4>
                             <a href="#">Jeeted a mooner and bagged a rug? - $ROPE</a>
-                            <a href="#">Bought High, Sold Low - $ROPE </a>
+                            <a href="#">Bought High, Sold Low? - $ROPE </a>
                             <a href="#">$ROPE early $ROPE often</a>
                         </div>
                     </div>
