--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. https://webflow.com -->
-<!-- Last Published: Wed Jun 12 2024 06:42:58 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Wed Jun 12 2024 10:32:55 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="rope-0fd781.webflow.io" data-wf-page="6669191035f62eba5b0c9d92" data-wf-site="6669191035f62eba5b0c9d28">
     <head>
         <meta charset="utf-8"/>
@@ -44,7 +44,7 @@
             <div data-w-id="18d3e42d-3957-2859-4c02-3772d7d7d9d7" class="wrapper">
                 <div class="button-block">
                     <a data-w-id="00fdd0f0-2e5c-f826-4b4e-94777ba8df6a" href="https://www.pump.fun/3d5uRLp2xuSLHmsskBBHus76urNFDiZTrQpkAB1Spump" target="_blank" class="button w-button">Pump Fun</a>
-                    <div data-w-id="6c95a585-9981-468a-c4ee-088c04e993d5" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="line-hor origin-left"></div>
+                    <div data-w-id="6c95a585-9981-468a-c4ee-088c04e993d5" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="line-hor-copy origin-left"></div>
                 </div>
                 <div class="w-container">
                     <div data-w-id="750768c2-fb06-584f-7c77-d00f367dd17e" style="-webkit-transform:translate3d(0, 0, 0) scale3d(6, 6, 1) rotateX(0) rotateY(0) rotateZ(-12deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(6, 6, 1) rotateX(0) rotateY(0) rotateZ(-12deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(6, 6, 1) rotateX(0) rotateY(0) rotateZ(-12deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(6, 6, 1) rotateX(0) rotateY(0) rotateZ(-12deg) skew(0, 0);filter:blur(5px)" class="rotation-hero-text">
@@ -671,6 +671,61 @@
                             <h4>THE NARRATIVE</h4>
                             <a href="#">Jeeted a mooner and bagged a rug? - $ROPE</a>
                             <a href="#">Bought High, Sold Low? - $ROPE </a>
+                            <section class="section-2">
+                                <a href="#">Dev based </a>
+                                <a href="#" class="fade-in-and-out">In India? </a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" class="fade-in-and-out">likes Nickleback?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">It &#x27;s Dev &#x27;s </a>
+                                <a href="#" data-w-id="f6c2435a-4c09-42bb-659a-35e376a795c5" style="opacity:0">3rd project?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="64b56f73-154b-3246-a01b-5a89ec4c860b" style="opacity:0">has no legs and thus cannot touch grass?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="6b5559d3-1889-9058-4863-167df3223688" style="opacity:0">has no marketing budget?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="231f7a81-957f-1bba-acd3-f25de7e6783e" style="opacity:0">loves eating vegetables?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="30b46306-6481-aec1-a838-13a9a18751a7" style="opacity:0">is an ETH maxi?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="489b5782-fd8a-0534-42b1-76aa51597cc5" style="opacity:0">works a day job?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="2c46a6b5-b059-706d-a7a0-1c4c8760237e" style="opacity:0">takes crypto gains and buys Options?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#">Dev </a>
+                                <a href="#" data-w-id="64d869de-02a2-0d9c-efda-91a64f5b2cf8" style="opacity:0">doesn &#x27;t look at the chart of his holdings cause he knows whatever he buys goes down?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2">
+                                <a href="#" data-w-id="61fe30c7-0ee4-bda1-fa21-6ed8087c3f28" style="opacity:0">Lost it all and ready for the climb?</a>
+                                <a href="#">- $ROPE </a>
+                            </section>
+                            <section class="section-2"></section>
                             <a href="#">$ROPE early $ROPE often</a>
                         </div>
                     </div>
