--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                     </div>
                     <div class="resources-block">
                         <div class="flex ver">
-                            <h4>THE NARRATIVE</h4>
+                            <h4>THE NARRATIVE (TAP THE BLANK SPACES OR LET IT FADE)</h4>
                             <a href="#">Jeeted a mooner and bagged a rug? - $ROPE</a>
                             <a href="#">Bought High, Sold Low? - $ROPE </a>
                             <section class="section-2">
