--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. https://webflow.com -->
-<!-- Last Published: Wed Jun 12 2024 10:32:55 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Wed Jun 12 2024 11:00:45 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="rope-0fd781.webflow.io" data-wf-page="6669191035f62eba5b0c9d92" data-wf-site="6669191035f62eba5b0c9d28">
     <head>
         <meta charset="utf-8"/>
@@ -668,7 +668,12 @@
                     </div>
                     <div class="resources-block">
                         <div class="flex ver">
-                            <h4>THE NARRATIVE (TAP THE BLANK SPACES OR LET IT FADE)</h4>
+                            <section class="section-3">
+                                <h4>THE NARRATIVE </h4>
+                                <h4>(TAP THE BLANK SPACES👆 </h4>
+                                <h4 class="fade-in-and-out">OR LET IT FADE</h4>
+                                <h4>)</h4>
+                            </section>
                             <a href="#">Jeeted a mooner and bagged a rug? - $ROPE</a>
                             <a href="#">Bought High, Sold Low? - $ROPE </a>
                             <section class="section-2">
